--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
 Django==2.2.6
+djangorestframework==3.11.0
 entrypoints==0.3
 feedfinder2==0.0.4
 feedparser==5.2.1
